--- a/hemantProject/com.configuration/config.properties
+++ b/hemantProject/com.configuration/config.properties
@@ -2,12 +2,12 @@ url=http://newtours.demoaut.com/
 #https://thesra.org/members/
 username1=hzope12@gmail.com
 password1=hemant9944
-browser=chrome
+browser=firefox
 
 
 #=======================Page Object Repository Starts here==========================
 
-signInBtn = xpath:.//td/a[contains(text(), 'SIGN-ON')]
-userName = xpath:.//input[@name = 'userName']
-password = xpath:.//input[@name = 'password']
-submitBtn = xpath:.//input[@name = 'login']
+signInBtn =xpath:.//td/a[contains(text(), 'SIGN-ON')]
+userName =xpath:.//input[@name = 'userName']
+password =xpath:.//input[@name = 'password']
+submitBtn =xpath:.//input[@name = 'login']
